--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li><a href="">HOME</a></li>
             <li><a href="">ABOUT</a></li>
             <li><a href="">SERVICES</a></li>
-            <li><a href="">BLOG</a></li>
+            <li><a href="">PORTFOLIO</a></li>
             <li><a href="">CONTACT</a></li>
           </ul>
         </div>
